--- a/syncthing-discovery/build.gradle
+++ b/syncthing-discovery/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.protobuf:protobuf-lite:$protobuf_lite_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 run {
