--- a/syncthing-relay-client/build.gradle
+++ b/syncthing-relay-client/build.gradle
@@ -3,5 +3,8 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation project(':syncthing-core')
+    implementation 'commons-io:commons-io:2.15.1'
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.78'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'org.slf4j:slf4j-api:2.0.13'
 }
