--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
     ext.anko_version = '0.10.8'
     ext.protobuf_lite_version = '3.0.1'
     repositories {
-        mavenLocal()
         jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
         google()
     }
@@ -23,9 +23,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-            url "https://artifactory.appodeal.com/appodeal-public/"
-        }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url "https://artifactory.appodeal.com/appodeal-public/" }
     }
 }
