--- a/syncthing-bep/build.gradle
+++ b/syncthing-bep/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
     implementation "com.google.protobuf:protobuf-lite:$protobuf_lite_version"
-    implementation 'org.bouncycastle:bcprov-jdk15to18:1.78'
+    implementation "org.bouncycastle:bcmail-jdk15on:1.59"
     implementation 'org.slf4j:slf4j-api:2.0.13'
     implementation 'commons-io:commons-io:2.15.1'
     implementation 'org.apache.commons:commons-lang3:3.14.0'
