--- a/syncthing-repository-android/build.gradle
+++ b/syncthing-repository-android/build.gradle
@@ -44,7 +44,7 @@ kotlin {
 }
 
 dependencies {
-    def room_version = "1.1.1"
+    def room_version = "2.5.2"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -54,8 +54,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     implementation (project(':syncthing-client')) {
         exclude group: 'commons-logging', module:'commons-logging'
