--- a/syncthing-repository-default/build.gradle
+++ b/syncthing-repository-default/build.gradle
@@ -7,6 +7,6 @@ dependencies {
     implementation 'com.h2database:h2:1.4.196'
     implementation 'com.zaxxer:HikariCP-java7:2.4.13'
     // JDK8 version of the library is required for AutoCloseable.use()
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.protobuf:protobuf-lite:$protobuf_lite_version"
 }
