--- a/syncthing-client/build.gradle
+++ b/syncthing-client/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 dependencies {
     implementation project(':syncthing-core')
     implementation project(':syncthing-bep')
