--- a/syncthing-discovery/build.gradle
+++ b/syncthing-discovery/build.gradle
@@ -3,6 +3,12 @@ apply plugin: 'kotlin'
 apply plugin: 'com.google.protobuf'
 mainClassName = 'net.syncthing.java.discovery.Main'
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 dependencies {
     implementation project(':syncthing-core')
     implementation "commons-cli:commons-cli:1.4"
