--- a/syncthing-temp-repository-encryption/build.gradle
+++ b/syncthing-temp-repository-encryption/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 dependencies {
     implementation (project(':syncthing-core')) {
         exclude group: 'commons-logging', module:'commons-logging'
