--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
         }
     }
 
+    buildFeatures {
+        dataBinding true
+    }
+
     buildTypes {
         debug {
             minifyEnabled false
@@ -83,6 +87,22 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.AppIntro:AppIntro:6.1.0'
 
+    implementation project(':syncthing-core')
+    implementation project(':syncthing-client')
+    implementation project(':syncthing-bep')
+    implementation project(':syncthing-temp-repository-encryption')
     implementation project(':syncthing-repository-android')
     implementation project(':syncthing-temp-repository-encryption')
+    
+    def appcompat_version = "1.6.1"
+    def material_version = "1.9.0"
+    def constraintlayout_version = "2.1.4"
+    def recyclerview_version = "1.3.1"
+
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation "androidx.fragment:fragment-ktx:1.6.2"
+    implementation "androidx.core:core-ktx:1.12.0"
 }
