--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,10 @@ dependencies {
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:preference-v14:$support_version"
-    implementation "com.android.support:support-v4:$support_version"
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     implementation(project(':syncthing-client')) {
         exclude group: 'commons-logging', module: 'commons-logging'
