--- a/syncthing-repository-android/build.gradle
+++ b/syncthing-repository-android/build.gradle
@@ -41,6 +41,7 @@ kotlin {
 }
 
 dependencies {
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     def room_version = "2.5.2"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
