--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.0'
+    ext.kotlin_version = '1.3.61'
     ext.support_version = '27.1.1'
     ext.build_tools_version = '3.2.1'
     ext.anko_version = '0.10.8'
     ext.protobuf_lite_version = '3.0.1'
+    ext.junit5_version = '5.4.0'
+    ext.log4JVersion = '2.13.1'
     repositories {
         mavenLocal()
         jcenter()
@@ -16,8 +18,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:$build_tools_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.6'
         classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.11'
     }
 }
 
