--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
-    dataBinding.enabled = true
+
 
     defaultConfig {
         applicationId "net.syncthing.lite"
@@ -29,8 +29,8 @@ android {
     packagingOptions {
         exclude 'META-INF/*'
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
 }
 
