--- a/syncthing-bep/build.gradle
+++ b/syncthing-bep/build.gradle
@@ -9,12 +9,8 @@ dependencies {
     compile "net.jpountz.lz4:lz4:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
+    implementation "com.google.protobuf:protobuf-lite:$protobuf_lite_version"
     implementation "org.apache.logging.log4j:log4j-api:$log4JVersion"
-    api "com.google.protobuf:protobuf-lite:$protobuf_lite_version"
-
-    testImplementation "org.junit.jupiter:junit-jupiter-params:$junit5_version"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit5_version"
-    testImplementation "com.google.truth.extensions:truth-java8-extension:1.0"
 }
 
 protobuf {
@@ -44,9 +40,3 @@ protobuf {
 // Workaround for https://github.com/google/protobuf-gradle-plugin/issues/100
 compileKotlin.dependsOn('generateProto')
 sourceSets.main.kotlin.srcDirs += file("${protobuf.generatedFilesBaseDir}/main/javalite")
-
-tasks.withType(Test.class) { useJUnitPlatform() }
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
