--- a/syncthing-client/build.gradle
+++ b/syncthing-client/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'kotlin'
 
 dependencies {
     api project(':syncthing-bep')
+    api project(':syncthing-discovery')
     implementation project(':syncthing-core')
-    implementation project(':syncthing-discovery')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
 }
