--- a/syncthing-bep/build.gradle
+++ b/syncthing-bep/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
     implementation "org.apache.logging.log4j:log4j-api:$log4JVersion"
-    implementation "com.google.protobuf:protobuf-javalite:$protobuf_lite_version"
+    api  "com.google.protobuf:protobuf-javalite:$protobuf_lite_version"
 }
 
 protobuf {
