--- a/syncthing-bep/build.gradle
+++ b/syncthing-bep/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.google.protobuf'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':syncthing-core')
+    api project(':syncthing-core')
     implementation project(':syncthing-relay-client')
     implementation "net.jpountz.lz4:lz4:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
