--- a/syncthing-bep/build.gradle
+++ b/syncthing-bep/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'kotlin'
 apply plugin: 'com.google.protobuf'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     api project(':syncthing-core')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':syncthing-relay-client')
     implementation "net.jpountz.lz4:lz4:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
