--- a/syncthing-client-cli/build.gradle
+++ b/syncthing-client-cli/build.gradle
@@ -15,3 +15,11 @@ run {
         args project.args.split('\\s+')
     }
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs += [
+            "-Xuse-experimental=kotlin.Experimental"
+        ]
+    }
+}
