--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
+    // namespace = "net.syncthing.lite"
 
     defaultConfig {
         applicationId "net.syncthing.lite"
@@ -56,6 +57,8 @@ dependencies {
 
     implementation project(':syncthing-repository-android')
     implementation project(':syncthing-temp-repository-encryption')
+    
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
