--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation "com.android.support:preference-v14:$support_version"
     implementation "com.android.support:support-v4:$support_version"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
 
     implementation(project(':syncthing-client')) {
         exclude group: 'commons-logging', module: 'commons-logging'
