--- a/syncthing-repository-android/build.gradle
+++ b/syncthing-repository-android/build.gradle
@@ -43,6 +43,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     def room_version = "2.3.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
