Revert "exclude 'META-INF/*'"
This reverts commit 8078f3f78812f7532def2f78174d190bf9d75715.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,7 @@ android {
         }
     }
     packagingOptions {
-        jniLibs {
-            excludes += ['META-INF/*']
-        }
-        resources {
-            excludes += ['META-INF/*']
-        }
+        exclude 'META-INF/*'
     }
     buildFeatures {
         dataBinding true
