--- a/syncthing-repository-android/build.gradle
+++ b/syncthing-repository-android/build.gradle
@@ -38,6 +38,7 @@ android {
     lintOptions {
         abortOnError false
     }
+    namespace 'net.syncthing.repository.android'
 }
 
 dependencies {
