--- a/syncthing-repository-android/build.gradle
+++ b/syncthing-repository-android/build.gradle
@@ -31,7 +31,14 @@ android {
 
     kapt {
         arguments {
-            arg("room.schemaLocation", "$projectDir/schemas".toString())
+            arg("room.schemaLocation", "$projectDir/schemas")
+            arg("room.incremental", "true")
+        }
+    }
+
+    sourceSets {
+        main {
+            java.srcDirs += "$buildDir/generated/kapt/main"
         }
     }
 
