--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,6 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        maven { url "https://artifactory.appodeal.com/appodeal-public/" }
     }
 }
