--- a/syncthing-temp-repository-encryption/build.gradle
+++ b/syncthing-temp-repository-encryption/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
-    implementation (project(':syncthing-core')) {
-        exclude group: 'ch.qos.logback'
-    }
+    implementation (project(':syncthing-core'))
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
