--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 34
+    buildToolsVersion "34.0.0" 
 
     defaultConfig {
         applicationId "net.syncthing.lite"
