--- a/syncthing-repository-android/build.gradle
+++ b/syncthing-repository-android/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 34
+    buildToolsVersion "34.0.0" 
 
     defaultConfig {
         minSdkVersion 16
