--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
         multiDexEnabled true
     }
 
+    dexOptions {
+        preDexLibraries = false
+    }
+
     buildTypes {
         debug {
             minifyEnabled false
