--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.apl-devs:appintro:6.2.0'
 
-    implementation(project(':syncthing-client'))
+    implementation project(':syncthing-client')
     implementation project(':syncthing-repository-android')
     implementation project(':syncthing-temp-repository-encryption')
 }
