KeystoreHandler in Application.kt (okay)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.github.apl-devs:appintro:6.2.0'
 
     implementation project(':syncthing-client')
+    implementation project(':syncthing-core')
     implementation project(':syncthing-repository-android')
     implementation project(':syncthing-temp-repository-encryption')
 }
