--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:name=".library.CacheFileProvider"
             android:authorities="net.syncthing.lite.fileprovider"
             android:grantUriPermissions="true"
-            android:exported="false" />
+            android:exported="true" />
         <provider
             android:name=".library.SyncthingProvider"
             android:authorities="net.syncthing.lite.documents"
