--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@ gen/
 obj/
 .gradle/
 
+# gradle-play-publisher
+.android/
+*.keystore
+*.jks
+keys.json
+
 # Local configuration file (sdk path, etc)
 local.properties
 project.properties
