--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -8,7 +8,6 @@ on:
   pull_request:
   push:
     branches:
-      - accrescent
       - fdroid
       - main
       - release
@@ -24,7 +23,7 @@ jobs:
           submodules: true
           fetch-depth: 0
 
-      - name: Get app version from app/build.gradle.kts
+      - name: Get app version from gradle/libs.versions.toml
         id: get_version
         run: |
           set -eu
@@ -74,11 +73,3 @@ jobs:
           name: reports
           path: |
             app/build/reports/**
-
-      - if: false
-        uses: actions/upload-artifact@v4
-        with:
-          name: reports-and-libs
-          path: |
-            app/build/reports/**
-            app/src/main/jniLibs/**
