--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx4g
-org.gradle.parallel=false
+org.gradle.parallel=true
