--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,8 +18,9 @@ version-name = "1.30.0.0"
 # AndroidX and Google libraries
 activity = "1.10.1"
 appcompat = "1.7.1"
-compose-material = "1.8.3"
+compose-material3 = "1.3.2"
 compose-material-icons = "1.7.8"
+compose-ui = "1.8.3"
 constraintlayout = "2.2.1"
 legacy-preference-v14 = "1.0.0"
 legacy-support-v4 = "1.0.0"
@@ -61,9 +62,9 @@ protobuf-protoc = { module = "com.google.protobuf:protoc", version.ref = "protob
 # AndroidX and Google
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
-compose-material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose-material-icons" }
-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose-material" }
+compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose-ui" }
 constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 legacy-preference-v14 = { module = "androidx.legacy:legacy-preference-v14", version.ref = "legacy-preference-v14" }
 legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacy-support-v4" }
@@ -79,7 +80,7 @@ preference-ktx = { module = "androidx.preference:preference-ktx", version.ref = 
 
 # Third-party
 aboutlibraries-core = { module = "com.mikepenz:aboutlibraries-core", version.ref = "aboutLibraries" }
-aboutlibraries-compose-m2 = { module = "com.mikepenz:aboutlibraries-compose", version.ref = "aboutLibraries" }
+aboutlibraries-compose-m3 = { module = "com.mikepenz:aboutlibraries-compose-m3", version.ref = "aboutLibraries" }
 zxing-integration = { module = "com.google.zxing:android-integration", version.ref = "zxing-integration" }
 zxing-core = { module = "com.google.zxing:core", version.ref = "zxing-core" }
 zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxing-android-embedded" }
