--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -44,6 +44,7 @@ body:
     attributes:
       label: App install source - see wiki for details on release channels
       options:
+        - F-Droid release build
         - GitHub trusted debug build
         - GitHub untrusted debug build
         - GitHub release build
