--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
-# Project-wide Gradle settings.
-android.useAndroidX=true
 android.enableJetifier=true
+android.useAndroidX=true
 org.gradle.caching=true
-org.gradle.jvmargs=-Xmx4g
+org.gradle.jvmargs=-Xmx4096M
 org.gradle.parallel=true
