--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -109,22 +109,24 @@ jobs:
           COMMIT_HASH_SHORT=$(echo "$COMMIT_HASH_LONG" | cut -c1-7)
           echo "COMMIT_HASH=${COMMIT_HASH_SHORT}" >> $GITHUB_ENV
 
-      - name: setup-debug-signing
+      - name: Setup debug signing
         run: |
           set -eu
-          mkdir -p "/root/.android"
+          # Create directories - debug keystore goes to ANDROID_USER_HOME
+          mkdir -p "$ANDROID_USER_HOME"
+          
           if [ -n "${{ secrets.DEBUG_KEYSTORE_B64 }}" ]; then
             echo "Using TRUSTED debug.keystore for builds from branches corresponding to this repository"
-            echo '${{ secrets.DEBUG_KEYSTORE_B64 }}' | base64 -d > "/root/.android/debug.keystore"
+            echo '${{ secrets.DEBUG_KEYSTORE_B64 }}' | base64 -d > "${{ runner.temp }}/.android/debug.keystore"
           else
-            cp "scripts/debug/debug.keystore.pub" "/root/.android/debug.keystore"
+            cp "scripts/debug/debug.keystore.pub" "${{ runner.temp }}/.android/debug.keystore"
             echo "Using UNTRUSTED PUBLIC debug.keystore for builds from forked repositories"
           fi
 
-      - name: build
+      - name: Build app
         run: |
           set -eu
-          git config --system --add safe.directory '*'
+          git config --global --add safe.directory '*'
           java -version
           ./gradlew --no-daemon lintDebug assembleDebug
 
