--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.temp }}/.gradle/caches
             ${{ runner.temp }}/.gradle/wrapper
             ${{ runner.temp }}/.android
-          key: ${{ runner.os }}-gradle-android-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}-${{ steps.get_ndk_version.outputs.ndk_version }}
+          key: ${{ runner.os }}-gradle-android-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-android-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}-
             ${{ runner.os }}-gradle-android-
@@ -55,7 +55,7 @@ jobs:
         with:
           path: |
             ~/android-sdk
-          key: android-sdk-${{ runner.os }}-${{ steps.get_ndk_version.outputs.ndk_version }}
+          key: android-sdk-${{ runner.os }}
           restore-keys: |
             android-sdk-${{ runner.os }}-
 
