--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -8,11 +8,13 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
     name: Debug Build
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - uses: actions/checkout@v4
         with:
